[gd_scene load_steps=3 format=3 uid="uid://c5f30b5pyem5p"]

[ext_resource type="Script" path="res://resources/DetectionSystem/detection_system.gd" id="1_hw2ff"]
[ext_resource type="Shape2D" uid="uid://dnsu01e44ukw5" path="res://resources/enemies/genius/genius_detection_shape.tres" id="1_m8f8x"]

[node name="DetectionSystem" type="Node2D"]
script = ExtResource("1_hw2ff")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = ExtResource("1_m8f8x")
debug_color = Color(0, 0.6, 0.701961, 0.211765)

[node name="Rays" type="Node2D" parent="."]

[node name="VisionCast1" type="RayCast2D" parent="Rays"]
target_position = Vector2(147, -9)
collision_mask = 7
collide_with_areas = true

[node name="VisionCast2" type="RayCast2D" parent="Rays"]
target_position = Vector2(148, 0)
collision_mask = 7
collide_with_areas = true

[node name="VisionCast3" type="RayCast2D" parent="Rays"]
target_position = Vector2(147, 9)
collision_mask = 7
collide_with_areas = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
